# pyppl_lock

./: .pre-commit-config.yaml  .pylintrc  .tagitrc  README.md  pyppl_lock.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_lock.py
