[tool.poetry]
name = "pyppl_lock"
version = "0.0.2"
description = "Preventing running processes from running again for PyPPL"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"
filelock = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pyppl]
pyppl_lock = "pyppl_lock"
